fix: add voice
